--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,7 +55,7 @@
                             </ul>
                             
                             <div class="ms-0 ms-lg-5">
-                                <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2" href="/login">
+                                <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2" href="/session/login">
                                         <span class="ps-2 d-block"> Iniciar Sesion</span>
                                 </a>
                             </div>
@@ -76,7 +76,7 @@
                             <img src="images/heading1.png" class="heading-img" alt="heading image">
                         </div>
                     </div>
-                    <a href="subs/market.html" type="button" class="dwl-button btn btn-light btn-lg mt-5 mt-lg-5"><i class="fa-solid fa-store"></i> Tienda</a>
+                    <a href="/market/market.html" type="button" class="dwl-button btn btn-light btn-lg mt-5 mt-lg-5"><i class="fa-solid fa-store"></i> Tienda</a>
                 </div>
             </div>
             
