--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,7 +55,7 @@
                             </ul>
                             
                             <div class="ms-0 ms-lg-5">
-                                <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2" href="/session/login">
+                                <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2" href="/login">
                                         <span class="ps-2 d-block"> Iniciar Sesion</span>
                                 </a>
                             </div>
