--- a/views/session/login.hbs
+++ b/views/session/login.hbs
@@ -116,7 +116,7 @@
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                            
                         <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
                     <div class="mb-3 form-check">
@@ -126,6 +126,9 @@
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
 
+                    </div>
+                    <div class="mb-3 pt-3">
+                        <label for="exampleInputEmail1" class="form-label">¿Aún no tiene una cuenta? <a href="/register">Crear Cuenta</a></label>
                     </div>
                 </form>
             </div>
