adding register post router and printing in console its request 🪵🪵🪵🪵🪵

--- a/views/session/register.hbs
+++ b/views/session/register.hbs
@@ -110,7 +110,7 @@
         <div class="container-fluid login-container text-center">
             <h2>Crear Cuenta</h2>
             <div class="container-fluid form-container text-start">
-                <form>
+                <form action="/register" method="POST">
                     <div class="mb-3">
                         <label for="name" class="form-label">Nombres</label>
                         <input type="text" class="form-control" id="name" aria-describedby="emailHelp">
