--- a/views/session/register.hbs
+++ b/views/session/register.hbs
@@ -113,26 +113,26 @@
                 <form action="/register" method="POST">
                     <div class="mb-3">
                         <label for="name" class="form-label">Nombres</label>
-                        <input type="text" class="form-control" id="name" aria-describedby="emailHelp">
+                        <input type="text" class="form-control" id="name" aria-describedby="emailHelp" name="name">
                     </div>
                     <div class="mb-3">
                         <label for="lastName" class="form-label">Apellidos</label>
-                        <input type="text" class="form-control" id="lastName">
+                        <input type="text" class="form-control" id="lastName" name="lastName">
                     </div>
                     <div class="mb-3">
                         <label for="InputEmail" class="form-label">Dirección de correo electrónico</label>
-                        <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="InputEmail" name="email" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
                         <label for="InputPassword" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" >
+                        <input type="password" class="form-control" id="exampleInputPassword1" name="password">
                         <div id="passwordHelpBlock" class="form-text">
                             Su contraseña debe ser de 8-20 caracteres, contener letras y números.
                         </div>
                     </div>
                     <div class="mb-5">
                         <label for="InputPassword1" class="form-label">Repetir Contraseña</label>
-                        <input type="password" class="form-control" id="InputPassword1">
+                        <input type="password" class="form-control" id="InputPassword1" name="repPassword">
                     </div>
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary">Crear Cuenta</button>
