writing to the database and correcting database name ®️®️®️

--- a/views/session/register.hbs
+++ b/views/session/register.hbs
@@ -108,14 +108,16 @@
 
     <section id="signup">
         <div class="container-fluid login-container text-center">
-            {{#if message.length > 0}}
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <div class="container-fluid form-container text-start">
+                {{#if message}}
+                    <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
                         {{message}}
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
                 {{/if}}
-            <h2>Crear Cuenta</h2>
-            <div class="container-fluid form-container text-start">
+                <div class="text-center">
+                    <h2>Crear Cuenta</h2>
+                </div>
                 <form action="/register" method="POST">
                     <div class="mb-3">
                         <label for="name" class="form-label">Nombres</label>
