--- a/views/session/login.hbs
+++ b/views/session/login.hbs
@@ -108,8 +108,16 @@
 
     <section id="login">
         <div class="container-fluid login-container text-center">
-            <h2>Iniciar Sesión</h2>
             <div class="container-fluid form-container text-start">
+                {{#if message}}
+                    <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
+                        {{message}}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {{/if}}
+                <div class="text-center">
+                    <h2>Iniciar Sesión</h2>
+                </div>
                 <form>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email address</label>
