--- a/views/session/login.hbs
+++ b/views/session/login.hbs
@@ -118,14 +118,14 @@
                 <div class="text-center">
                     <h2>Iniciar Sesión</h2>
                 </div>
-                <form>
+                <form action="/login" method="POST">
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
-                            
-                        <input type="password" class="form-control" id="exampleInputPassword1">
+                        <label for="exampleInputEmail1" class="form-label">Contraseña</label>                            
+                        <input type="password" class="form-control" id="exampleInputPassword1" name="password">
                     </div>
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
