authenticating users if they are logged in or not👤👤

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -76,7 +76,7 @@
                             <img src="images/heading1.png" class="heading-img" alt="heading image">
                         </div>
                     </div>
-                    <a href="/market/market.html" type="button" class="dwl-button btn btn-light btn-lg mt-5 mt-lg-5"><i class="fa-solid fa-store"></i> Tienda</a>
+                    <a href="/marketplace" type="button" class="dwl-button btn btn-light btn-lg mt-5 mt-lg-5"><i class="fa-solid fa-store"></i> Tienda</a>
                 </div>
             </div>
             
