--- a/views/index.hbs
+++ b/views/index.hbs
@@ -56,7 +56,7 @@
                             
                             <div class="ms-0 ms-lg-5">
                                 {{#if loggedIn}}
-                                    <div class="dropdown ms-0 ms-lg-5">
+                                    <div class="dropdown-center ms-0 ms-lg-5">
                                         <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2 dropdown-toggle" data-bs-toggle="dropdown"
                                             aria-expanded="false">
                                             <span class="ps-2"> {{user.first_name}}</span>
@@ -67,7 +67,7 @@
                                             <li>
                                                 <hr class="dropdown-divider">
                                             </li>
-                                            <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
+                                            <li><a class="dropdown-item" href="/logout">Cerrar Sesion</a></li>
                                         </ul>
                                     </div>
                                 {{else}}
