removing some unnecesary code for the check login auth to show data about a logged user 🧹🧹🧹🧹

--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -55,7 +55,7 @@
                     </ul>
                     <a href="#Catalog">
                         <div class="dropdown-center">
-                            {{#if loggedIn}}
+                            {{#if user}}
                                 <div class="dropdown-center">
                                     <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2 dropdown-toggle" data-bs-toggle="dropdown"
                                         aria-expanded="false">
