--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,7 +55,7 @@
                             </ul>
                             
                             <div class="ms-0 ms-lg-5">
-                                {{#if loggedIn}}
+                                {{#if user}}
                                     <div class="dropdown-center ms-0 ms-lg-5">
                                         <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2 dropdown-toggle" data-bs-toggle="dropdown"
                                             aria-expanded="false">
