looking for bugs by adding more debug logs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -63,7 +63,7 @@
                                         </a>
                                         <ul id="dropdownEnter" class="dropdown-menu text-small shadow">
                                             <li><a class="dropdown-item" href="subs/cart_sopping.html">Carrito</a></li>
-                                            <li><a class="dropdown-item" href="subs/account_customers.html">Perfil</a></li>
+                                            <li><a class="dropdown-item" href="/profile">Perfil</a></li>
                                             <li>
                                                 <hr class="dropdown-divider">
                                             </li>
