--- a/views/session/profile_customers.hbs
+++ b/views/session/profile_customers.hbs
@@ -110,6 +110,12 @@
         <div class="container-fluid login-container text-center">
             <h2>Mi Cuenta</h2>
             <div class="container-fluid form-container text-start">
+                {{#if message}}
+                    <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
+                        {{message}}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {{/if}}
                 <form action="/profile" method="POST">
                     <div class="mb-3">
                         <label for="name" class="form-label">Nombres</label>
