fixing bar links 🪲

--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -31,7 +31,7 @@
     
         <nav class="navbar navbar-expand-lg navbar-dark mb-3 py-3">
             <div class="container-fluid px-0">
-                <a class="navbar-brand" href="../index.html">OVA Tienda Virtual</a>
+                <a class="navbar-brand" href="/">OVA Tienda Virtual</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -47,10 +47,10 @@
                             <a class="nav-link active" href="#">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contacto</a>
+                            <a class="nav-link" href="/contact">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html#Catalog">Catálogo</a>
+                            <a class="nav-link" href="/#Catalog">Catálogo</a>
                         </li>
                     </ul>
                     <a href="#Catalog">
@@ -62,7 +62,7 @@
                                         <span class="ps-2"> {{user.first_name}}</span>
                                     </a>
                                     <ul id="dropdownEnter" class="dropdown-menu text-small shadow">
-                                        <li><a class="dropdown-item" href="subs/cart_sopping.html">Carrito</a></li>
+                                        <li><a class="dropdown-item" href="/cart-shopping">Carrito</a></li>
                                         <li><a class="dropdown-item" href="/profile">Perfil</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
