--- a/views/session/login.hbs
+++ b/views/session/login.hbs
@@ -38,33 +38,39 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="market.html">Popular</a>
+                            <a class="nav-link" href="/marketplace">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contacto</a>
+                            <a class="nav-link" href="/contact">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html#Catalog">Catálogo</a>
+                            <a class="nav-link" href="/#Catalog">Catálogo</a>
                         </li>
                     </ul>
                     <a href="#Catalog">
-                        <div class="dropdown-center">
-                            <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2 dropdown-toggle"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="ps-2"> Mi Cuenta</span>
+                        {{#if user}}
+                            <div class="dropdown-center">
+                                <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2 dropdown-toggle" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    <span class="ps-2"> {{user.first_name}}</span>
+                                </a>
+                                <ul id="dropdownEnter" class="dropdown-menu text-small shadow">
+                                    <li><a class="dropdown-item" href="subs/cart_sopping.html">Carrito</a></li>
+                                    <li><a class="dropdown-item" href="/profile">Perfil</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="/logout">Cerrar Sesion</a></li>
+                                </ul>
+                            </div>
+                        {{else}}
+                            <a type="button" class="btn btn-outline-light catalog-btn ms-0 ms-lg-2" href="/login">
+                                <span class="ps-2 d-block"> Iniciar Sesion {{user.email}}</span>
                             </a>
-                            <ul class="dropdown-menu text-small shadow">
-                                <li><a class="dropdown-item" href="cart_sopping.html">Carrito</a></li>
-                                <li><a class="dropdown-item" href="account_customers.html">Perfil</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
-                            </ul>
-                        </div>
+                        {{/if}}
                     </a>
                 </div>
             </div>
