setting up the salesperson page and home links in the hbs's file

--- a/views/admin/a_home.hbs
+++ b/views/admin/a_home.hbs
@@ -61,7 +61,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./salesperson.html" class="nav-link link-dark">
+                            <a href="/admin/salesperson" class="nav-link link-dark">
                                 <span class="me-2">
                                     <i class="fa-regular fa-id-badge"></i> 
                                 </span>
