--- a/views/admin/products/products.hbs
+++ b/views/admin/products/products.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo vendedores</title>
+    <title>OVA admins</title>
 
     <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -37,7 +37,7 @@
                 <div class="position-sticky pt-3 sidebar-sticky">
                     <ul class="nav nav-pills flex-column mb-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link active" aria-current="page">
+                            <a href="./dashboard.html" class="nav-link link-dark" aria-current="page">
                                 <i class="fa-solid fa-house"></i>
                                 Home
                             </a>
@@ -49,42 +49,41 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./products.html" class="nav-link link-dark">
+                            <a href="#" class="nav-link active">
                                 <i class="fa-solid fa-cart-shopping"></i>
                                 Productos
                             </a>
                         </li>
                         <li>
-                            <a href="/admin/clients" class="nav-link link-dark">
-                                <i class="fa-solid fa-users"></i>
+                            <a href="./clients.html" class="nav-link link-dark">
+                                <i class="fa-solid fa-user-group"></i>
                                 Clientes
                             </a>
                         </li>
                         <li>
-                            <a href="/admin/salesperson" class="nav-link link-dark">
+                            <a href="./salesperson.html" class="nav-link link-dark">
                                 <span class="me-2">
-                                    <i class="fa-regular fa-id-badge"></i> 
+                                    <i class="fa-regular fa-id-badge"></i>
                                 </span>
                                 Vendedores
                             </a>
                         </li>
                         <li>
                             <a href="./reports.html" class="nav-link link-dark">
-                            <span class="me-0">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                class="feather feather-bar-chart-2 align-text-bottom" aria-hidden="true">
-                                    <line x1="18" y1="20" x2="18" y2="10"></line>
-                                    <line x1="12" y1="20" x2="12" y2="4"></line>
-                                    <line x1="6" y1="20" x2="6" y2="14"></line>
-                                </svg>
-                            </span>
+                                <span class="me-0">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="feather feather-bar-chart-2 align-text-bottom" aria-hidden="true">
+                                        <line x1="18" y1="20" x2="18" y2="10"></line>
+                                        <line x1="12" y1="20" x2="12" y2="4"></line>
+                                        <line x1="6" y1="20" x2="6" y2="14"></line>
+                                    </svg>
+                                </span>
                                 Reportes
                             </a>
                         </li>
                     </ul>
 
-                    <div class="py-3" height="20px"></div>
                     <hr class="">
                     <div class="dropdown px-3" bis_skin_checked="1">
                         <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle"
@@ -108,160 +107,64 @@
 
             <!-- dashboard -->
 
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-5">
-                <div
-                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Dashboard</h1>
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    <h1 class="h2">Productos</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
-                        <div class="btn-group me-2">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-                        </div>
-                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                            <span data-feather="calendar" class="align-text-bottom"></span>
-                            This week
-                        </button>
+                        <a class="btn btn-success" href="/links/add">Añadir Producto <i class="fa-solid fa-plus"></i></a>
                     </div>
                 </div>
 
 
-                <h2>Ventas</h2>
-
-                <!-- cards -->
-                <div class="container-fluid cards-container px-0 pb-5">
-                    <div class="row h-100">
-                        <div class="col-12 col-md-4">
-                            <!-- Card -->
-                            <div class="card border-0 h-100 shadow card-n-orders">
-                                <div class="card-header border-0 card-header-space-between pt-3">
-                                    <!-- Title -->
-                                    <h2 class="card-header-title h3 card-n-orders-title"> Ordenes Nuevas </h2>
-                                    <p class="h6 ps-3 card-n-orders-sub">Esperando Procesamiento</p>
-                                </div>
-                                <div class="card-body">
-                                    <div class="row h-100 justify-content-between">
-                                        <div class="col-9 d-flex flex-column text-center">
-                                            <!-- Subtitle -->
-                                            <h2 class="mb-0 mt-auto display-5 pb-2"> 213 ordenes</h2>
-                                            <!-- Comment -->
-                                            
-                                        </div>
-                    
-                                    </div> <!-- / .row -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <!-- Card -->
-                            <div class="card border-0 h-100 shadow card-orders">
-                                <div class="card-header border-0 card-header-space-between pt-3">
-                                    <!-- Title -->
-                                    <h2 class="card-header-title h3 card-orders-title"> Ordenes en Espera </h2>
-                                    <p class="h6 ps-3 card-orders-sub">Ordenes Preparadas por Pagar</p>
-                                </div>
-                                <div class="card-body">
-                                    <div class="row h-100 justify-content-between">
-                                        <div class="col-9 d-flex flex-column text-center">
-                                            <!-- Subtitle -->
-                                            <h2 class="mb-0 mt-auto display-5 pb-2"> 21 ordenes</h2>
-                                            <!-- Comment -->
-                            
-                                        </div>
-                            
-                                    </div> <!-- / .row -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <!-- Card -->
-                            <div class="card border-0 h-100 shadow card-out-stock">
-                                <div class="card-header border-0 card-header-space-between pt-3">
-                                    <!-- Title -->
-                                    <h2 class="card-header-title h3 card-out-stock-title"> Fuera de Stock </h2>
-                                    <p class="h6 ps-3 card-out-stock-sub">Productos agotados</p>
-                                </div>
-                                <div class="card-body">
-                                    <div class="row h-100 justify-content-between">
-                                        <div class="col-9 d-flex flex-column text-center">
-                                            <!-- Subtitle -->
-                                            <h2 class="mb-0 mt-auto display-5 pb-2"> 31 productos</h2>
-                                            <!-- Comment -->
-                            
-                                        </div>
-                            
-                                    </div> <!-- / .row -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <h2>Productos Registrados</h2>
+                <div class="table-sm-responsive mt-4">
+                    <table class="table table-hover table-bordered">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Nombre</th>
+                                <th>Precio</th>
+                                <th>Categoria</th>
+                                <th>Stock</th>
+                            </tr>
+                        </thead>
+                        <tbody class="table-group-divider">
+                            <tr class="">
+                                <td class="order align-middle white-space-nowrap">23</td>
+                                <td class="align-middle white-space-nowrap ps-8">
+                                    <a class=" align-items-center" href="#">
+                                        <h6 class="mb-0 text-900">Arduino Uno</h6>
+                                    </a>
+                                </td>
+                                <td class="total align-middle fw-semi-bold text-1000">95 Bs.</td>
+                                <td><span class="badge text-bg-light">Electronica</span> <span class="badge text-bg-light">Electronica</span></td>
+                                <td class="date align-middle white-space-nowrap text-700 "><span class=h2">45</span> unidades</td>
+                            </tr>
+                            <tr class="">
+                                <td class="order align-middle white-space-nowrap">23</td>
+                                <td class="align-middle white-space-nowrap ps-8">
+                                    <a class=" align-items-center" href="#">
+                                        <h6 class="mb-0 text-900">Arduino Uno</h6>
+                                    </a>
+                                </td>
+                                <td class="total align-middle fw-semi-bold text-1000">95 Bs.</td>
+                                <td><span class="badge text-bg-light">Electronica</span> <span class="badge text-bg-light">Electronica</span></td>
+                                <td class="date align-middle white-space-nowrap text-700 "><span class=h2">45</span> unidades</td>
+                            </tr>
+                            <tr class="">
+                                <td class="order align-middle white-space-nowrap">23</td>
+                                <td class="align-middle white-space-nowrap ps-8">
+                                    <a class=" align-items-center" href="#">
+                                        <h6 class="mb-0 text-900">Arduino Uno</h6>
+                                    </a>
+                                </td>
+                                <td class="total align-middle fw-semi-bold text-1000">95 Bs.</td>
+                                <td><span class="badge text-bg-light">Electronica</span> <span class="badge text-bg-light">Electronica</span></td>
+                                <td class="date align-middle white-space-nowrap text-700 "><span class=h2">45</span> unidades</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-
-                <!-- table contents dashboard -->
-                <h2>Ordenes Recientes</h2>
-                <div class="card flex-fill mt-2" bis_skin_checked="1">
-                    
-                    <div id="datatables-dashboard-projects_wrapper" class="dataTables_wrapper dt-bootstrap5 no-footer"
-                        bis_skin_checked="1">
-                        <div class="row" bis_skin_checked="1">
-                            <div class="col-sm-12 col-md-6" bis_skin_checked="1"></div>
-                            <div class="col-sm-12 col-md-6" bis_skin_checked="1"></div>
-                        </div>
-                        <div class="row dt-row" bis_skin_checked="1">
-                            <div class="col-sm-12" bis_skin_checked="1">
-                                <table id="datatables-dashboard-projects" class="table table-striped my-0 dataTable no-footer"
-                                    aria-describedby="datatables-dashboard-projects_info">
-                                    <thead>
-                                        <tr>
-                                            <th class="sorting sorting_asc" tabindex="0" aria-controls="datatables-dashboard-projects"
-                                                rowspan="1" colspan="1" aria-sort="ascending"
-                                                aria-label="Name: activate to sort column descending">N° ORDEN</th>
-                                            <th class="d-none d-xl-table-cell sorting" tabindex="0"
-                                                aria-controls="datatables-dashboard-projects" rowspan="1" colspan="1"
-                                                aria-label="Start Date: activate to sort column ascending">TOTAL</th>
-                                            <th class="d-none d-xl-table-cell sorting" tabindex="0"
-                                                aria-controls="datatables-dashboard-projects" rowspan="1" colspan="1"
-                                                aria-label="End Date: activate to sort column ascending">CLIENTE</th>
-                                            <th class="sorting" tabindex="0" aria-controls="datatables-dashboard-projects" rowspan="1"
-                                                colspan="1" aria-label="Status: activate to sort column ascending">ESTADO</th>
-                                            <th class="d-none d-md-table-cell sorting" tabindex="0"
-                                                aria-controls="datatables-dashboard-projects" rowspan="1" colspan="1"
-                                                aria-label="Assignee: activate to sort column ascending">FECHA</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr class="even">
-                                            <td class="order align-middle white-space-nowrap"><a class="fw-semi-bold" href="#!">#2448</a>
-                                            <td class="total align-middle fw-semi-bold text-1000">$9562</td>
-                                            <td class="align-middle white-space-nowrap ps-8">
-                                                <a class=" align-items-center" href="#">
-                                                    <h6 class="mb-0 text-900">Igor Borvibson</h6>
-                                                </a>
-                                            </td>
-                                            <td><span class="badge bg-success">Confirmado <i class="fa-solid fa-check"></i></span></td>
-                                            <td class="date align-middle white-space-nowrap text-700 fs--1 ">Nov 24, 10:16 AM</td>
-                                        </tr>
-                                        <tr class="even">
-                                            <td class="sorting_1">Project Fireball</td>
-                                            <td class="d-none d-xl-table-cell">01/01/2022</td>
-                                            <td class="d-none d-xl-table-cell">31/06/2022</td>
-                                            <td><span class="badge bg-danger">Cancelled <i class="fa-solid fa-xmark"></i></span></td>
-                                            <td class="d-none d-md-table-cell">Bertha Martin</td>
-                                        </tr>
-                                        <tr class="even">
-                                            <td class="sorting_1">Project Nitro</td>
-                                            <td class="d-none d-xl-table-cell">01/01/2022</td>
-                                            <td class="d-none d-xl-table-cell">31/06/2022</td>
-                                            <td><span class="badge bg-warning">Por Pagar <i class="fa-regular fa-clock"></i></span></td>
-                                            <td class="d-none d-md-table-cell">Carl Jenkins</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        
-                    </div>
-                </div>
-
             </main>
         </div>
     </div>
