workingon confirm or error display messages after sending a post request 📩📩📩

--- a/views/admin/clientsNcustomers/salesperson.hbs
+++ b/views/admin/clientsNcustomers/salesperson.hbs
@@ -109,14 +109,22 @@
             <!-- dashboard -->
 
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <div
-                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Vendedores</h1>
-                    <div class="btn-toolbar mb-2 mb-md-0">
-                        <a class="btn btn-success" href="/admin/add_employee">Añadir Empleado <i class="fa-solid fa-plus"></i></a>
+                <div class="container-fluid px-0">
+                    <div
+                        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                        <h1 class="h2">Vendedores</h1>
+                        <div class="btn-toolbar mb-2 mb-md-0">
+                            <a class="btn btn-success" href="/admin/add_employee">Añadir Empleado <i class="fa-solid fa-plus"></i></a>
+                        </div>
                     </div>
+                {{#if message}}
+                    <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
+                        {{message}}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {{/if}}
                 </div>
-            
+
             
                 <h2>Lista de Empleados</h2>
                 <div class="table-sm-responsive mt-4">
