--- a/views/admin/clientsNcustomers/add_employee.hbs
+++ b/views/admin/clientsNcustomers/add_employee.hbs
@@ -114,18 +114,26 @@
             <!-- dashboard -->
             
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-5">
-                <div class="row pt-3 pb-2 mb-3 border-bottom">
-                    <div class="col mb-2">
-                        <a class="btn btn-primary" href="/admin/salesperson"><i class="fa-solid fa-chevron-left"></i> Atras</a>
+                <div class="container-fluid px-0 pt-3 pb-2 mb-4 border-bottom">
+                    <div class="row ">
+                        <div class="col mb-2">
+                            <a class="btn btn-primary" href="/admin/salesperson"><i class="fa-solid fa-chevron-left"></i> Atras</a>
+                        </div>
+                        <div class="col text-center">
+                            <h2>Añadir Vendedor Nuevo</h2>
+                        </div>
+                        <div class="col text-end">
+                        </div>
                     </div>
-                    <div class="col text-center">
-                        <h2>Añadir Vendedor Nuevo</h2>
-                    </div>
-                    <div class="col text-end">
-                    </div>
-                </div>
                 
-                <div class="container p-4">
+                </div>
+                {{#if message}}
+                    <div class="alert {{alertType}} alert-dismissible fade show" role="alert">
+                        {{message}}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {{/if}}
+                <div class="container pt-2">
                     <div class="row">
                         <div class="col-md-4 mx-auto">
                             <div class="card">
