--- a/views/admin/clientsNcustomers/salesperson.hbs
+++ b/views/admin/clientsNcustomers/salesperson.hbs
@@ -144,8 +144,8 @@
                             {{#each employees}}
                                 <tr class="">
                                     <td class="order align-middle white-space-nowrap">{{id}}</td>
-                                    <td class="date align-middle white-space-nowrap text-700 "><a href="/edit_employee/{{id}}"
-                                            class="h2">{{email}}</a></td>
+                                    <td class="date align-middle white-space-nowrap text-700 "><a href="/admin/edit_employee/{{id}}"
+                                            class="h4">{{email}}</a></td>
                                     <td class="align-middle white-space-nowrap">
                                         <h6 class="mb-0 text-900">{{first_name}}</h6>
                                     </td>
