deleting employees button working properly

--- a/views/admin/clientsNcustomers/edit_employee.hbs
+++ b/views/admin/clientsNcustomers/edit_employee.hbs
@@ -122,7 +122,7 @@
                         <h2>Detalles del Vendedor</h2>
                     </div>
                     <div class="col text-end">
-                        <a class="btn btn-danger" href="/links/add"><i class="fa-regular fa-trash-can"></i> Eliminar Vendedor</a>
+                        <a class="btn btn-danger" href="/admin/delete_employee/{{employee.id}}"><i class="fa-regular fa-trash-can"></i> Eliminar Vendedor</a>
                     </div>
                 </div>
                 
